kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colors
  template:
    metadata:
      labels:
        app: colors
    spec:
      containers:
      - name: colors
        image: <your-image>
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: <your-image-pull-secret>
